added support for dynamic deserializers with enums to JsonTypeExtension